<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/layoutA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="#000000"
            android:fontFamily="@font/poppins"
            android:text="@string/a"
            android:textSize="20sp"
            app:cornerRadius="70dp"
            tools:text="@string/a" />

        <EditText
            android:id="@+id/etA"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"

            android:backgroundTint="#000000"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:inputType="numberSigned|numberDecimal"
            android:textSize="20sp"
            app:cornerRadius="70dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="#000000"
            android:fontFamily="@font/poppins"
            android:text="@string/b"
            android:textSize="20sp"
            app:cornerRadius="70dp"
            tools:text="@string/b" />

        <EditText
            android:id="@+id/etB"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"

            android:backgroundTint="#000000"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:inputType="numberSigned|numberDecimal"
            android:textSize="20sp"
            app:cornerRadius="70dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutRes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvResStatic"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="#000000"
            android:fontFamily="@font/poppins"
            android:text="@string/res"
            android:textSize="20sp"
            app:cornerRadius="70dp"
            tools:text="@string/res" />

        <TextView
            android:id="@+id/tvRes"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"

            android:backgroundTint="#000000"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:textSize="20sp"
            app:cornerRadius="70dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/btnsRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="#000000"
                android:fontFamily="@font/poppins"
                android:onClick="btnAddClick"
                android:text="@string/add"
                android:textSize="22sp"
                app:cornerRadius="70dp"
                tools:text="@string/add" />

            <Button
                android:id="@+id/btnSubtract"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="#000000"
                android:fontFamily="@font/poppins"
                android:onClick="btnSubtractClick"
                android:text="@string/subtract"
                android:textSize="22sp"
                app:cornerRadius="70dp"
                tools:text="@string/subtract" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="#000000"
                android:fontFamily="@font/poppins"
                android:onClick="btnMultiplyClick"
                android:text="@string/multiply"
                android:textSize="20sp"
                app:cornerRadius="70dp"
                tools:text="@string/multiply" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="#000000"
                android:fontFamily="@font/poppins"
                android:onClick="btnDivideClick"
                android:text="@string/divide"
                android:textSize="22sp"
                app:cornerRadius="70dp"
                tools:text="@string/divide" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnsRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPower"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="#000000"
                android:fontFamily="@font/poppins"
                android:onClick="btnPowerClick"
                android:text="@string/power"
                android:textSize="22sp"
                app:cornerRadius="70dp"
                tools:text="@string/power" />

            <Button
                android:id="@+id/btnSqrt"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="#000000"
                android:fontFamily="@font/poppins"
                android:onClick="btnSqrtClick"
                android:text="@string/sqrt"
                android:textSize="22sp"
                app:cornerRadius="70dp"
                tools:text="@string/sqrt" />

            <Button
                android:id="@+id/btnRemainder"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="#000000"
                android:fontFamily="@font/poppins"
                android:onClick="btnRemainderClick"
                android:text="@string/remainder"
                android:textSize="22sp"
                app:cornerRadius="70dp"
                tools:text="@string/remainder" />

            <Button
                android:id="@+id/btnIntDivide"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="#000000"
                android:fontFamily="@font/poppins"
                android:onClick="btnIntDivideClick"
                android:text="@string/intDivide"
                android:textSize="22sp"
                app:cornerRadius="70dp"
                tools:text="@string/intDivide" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnsRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSin"
                android:layout_width="55dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="#ff9900"
                android:fontFamily="@font/poppins"
                android:onClick="btnSinClick"
                android:text="@string/sin"
                android:textSize="18sp"
                app:cornerRadius="70dp"
                tools:text="@string/sin" />

            <Button
                android:id="@+id/btnAsin"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="#ff9900"
                android:fontFamily="@font/poppins"
                android:onClick="btnAsinClick"
                android:text="@string/asin"
                android:textSize="18sp"
                app:cornerRadius="70dp"
                tools:text="@string/asin" />

            <Button
                android:id="@+id/btnCos"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="#ff9900"
                android:fontFamily="@font/poppins"
                android:onClick="btnCosClick"
                android:text="@string/cos"
                android:textSize="18sp"
                app:cornerRadius="70dp"
                tools:text="@string/cos" />

            <Button
                android:id="@+id/btnAcos"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="#ff9900"
                android:fontFamily="@font/poppins"
                android:onClick="btnAcosClick"
                android:text="@string/acos"
                android:textSize="18sp"
                app:cornerRadius="70dp"
                tools:text="@string/acos" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnsRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnTg"
                android:layout_width="85dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="#ff9900"
                android:fontFamily="@font/poppins"
                android:onClick="btnTgClick"
                android:text="@string/tg"
                android:textSize="18sp"
                app:cornerRadius="70dp"
                tools:text="@string/tg" />

            <Button
                android:id="@+id/btnAtg"
                android:layout_width="85dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="#ff9900"
                android:fontFamily="@font/poppins"
                android:onClick="btnAtgClick"
                android:text="@string/atg"
                android:textSize="18sp"
                app:cornerRadius="70dp"
                tools:text="@string/atg" />

            <LinearLayout
                android:id="@+id/layoutDegree"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDegree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/forDegree"
                    android:textSize="20sp" />

                <Switch
                    android:id="@+id/switchDegree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/poppins"
                    android:minWidth="60dp"
                    android:minHeight="60dp" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>